[package]
name = "fontstash-sys"
version = "0.1.1"
authors = ["toyboot4e <toyboot4e@gmail.com>"]
edition = "2018"
exclude = []
description = "bindings to a forked version of fontstash"
repository = "https://github.com/toyboot4e/fontstash-rs"
license = "MIT"
categories = ["game-development"]
keywords = ["gamedev"]

links = "fontstash"

[lib]
name = "fontstash_sys"
path = "lib.rs"

[build-dependencies]
bindgen = "0.55.1"
cc = "1.0.60"
